--- a/index.html
+++ b/index.html
@@ -7,5 +7,65 @@
   </head>
   <body>
 
+    <nav class="nav-main">
+      <div class="nav-header">
+        <strong>Puerto Rico Airlines</strong>
+      </div>
+      <div class="header-links">
+        <button class="header-button">Home</button>
+        <button class="header-button">Flights</button>
+        <button class="header-button">Support</button>
+        <button class="header-button">Login</button>
+      </div>
+    </nav>
+
+    <section class="section-one">
+
+      <article class="white-box center-text">
+        <p class="box-header">
+          Flights
+        </p>
+        <p class="box-text">
+          Come check out our sweet flights! Direct flights available daily!
+        </p>
+        <button class="box-button">Lets Go</button>
+      </article>
+
+      <article class="white-box center-text">
+          <p class="box-header">
+            Group Trips
+          </p>
+          <p class="box-text">
+            We offer great group rates! For families with 4 members to huge gatherings with 50+!
+          </p>
+          <button class="box-button">Group Rates</button>
+        </article>
+
+        <article class="white-box center-text">
+          <p class="box-header">
+              Discount Flights
+          </p>
+          <p class="box-text">
+              Discount flights available for individuals! Single chair filler tickets for low rates!
+          </p>
+          <button class="box-button">Jump In</button>
+          </article>
+
+    </section>
+
+    <section class="section-two">
+
+      <article class="white-box center-text">
+          <p class="box-header">
+              About Us
+          </p>
+          <p class="box-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae recusandae provident doloremque repellendus, quae nisi delectus! Sequi unde odit, aperiam tempore recusandae nisi. Animi, necessitatibus. Pariatur incidunt quis a culpa!
+          </p>
+          <button class="box-button">Learn More</button>
+      </article>
+
+    </section>
+
   </body>
 </html>
